--- a/html/producto.html
+++ b/html/producto.html
@@ -8,17 +8,64 @@
     <title>Tienda | Productos</title>
 </head>
 <body>
-    <div class="wrapper">
-        <h1 class="titulo">Productos</h1>
-        <div class="card"><p>detodotido amarrillo</p><img src="../source/amarrillo.jpg" alt="amarrillo" class="card-image"></div>
-        <div class="card"><p>cheetos picantes</p><img src="../source/cheetos.jpg" alt="cheetos" class="card-image"></div>
-        <div class="card"><p>coca cola</p><img src="../source/coca.jpg" alt="coca" class="card-image"></div>
-        <div class="card"><p>detodito rojo</p><img src="../source/detodo.jpg" alt="detodo" class="card-image"></div>
-        <div class="card"><p>doritos</p><img src="../source/doritos.jpg" alt="doritos" class="card-image"></div>
-        <div class="card"><p>pepsi</p><img src="../source/pepsi.jpg" alt="pepsi" class="card-image"></div>
 
+    
+    <div class="menu">
 
+      <div class="menu2">
+        <ul>
+          <li><a href="producto.html">Inicio</a></li>
+          <li><a href="accion.html" >Accion</a></li>
+          <li><a href="Terror.html" >Terror</a></li>
+          <li><a href="aventura.html">Aventura</a></li>
+          <li><a href="deportes.html">Deportes</a></li>
+          <li><a href="shooters.html">Shooters</a></li>
+          <li><a href="arcade.html">Retro</a></li>
+        </ul>
+      </div>
 
-    </div>
+      <title>Sumar y Restar Número</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+        
+        <h1>Categorias</h1>
+
+        <div class="menu-item">
+          <a href="pagina1.html">
+            <a href="../html/accion.html"><img src="../source/RE4.jpg" alt="Imagen 1">
+            <p>ACCION</p>
+          </a>
+        </div>
+        <div class="menu-item">
+          <a href="pagina2.html">
+            <img src="../source/dead.jpg" alt="Imagen 2">
+            <p>TERROR</p>
+          </a>
+        </div>
+        <div class="menu-item">
+          <a href="pagina3.html">
+            <img src="../source/tloz.jpg" alt="Imagen 3">
+            <p>AVENTURA</p>
+          </a>
+        </div>
+        <div class="menu-item">
+          <a href="pagina4.html">
+            <img src="../source/fifta.jpg" alt="Imagen 4">
+            <p>DEPORTES</p>
+          </a>
+        </div>
+        <div class="menu-item">
+          <a href="pagina5.html">
+            <img src="../source/call.jpg" alt="Imagen 5">
+            <p>SHOOTERS</p>
+          </a>
+        </div>
+        <div class="menu-item">
+          <a href="pagina6.html">
+            <img src="../source/street.jpg" alt="Imagen 6">
+            <p>RETRO</p>
+          </a>
+        </div>
+      </div>
+
 </body>
-</html>
+      </html>
