--- a/html/arcade.html
+++ b/html/arcade.html
@@ -30,7 +30,7 @@
         <img src="../source/tienda.jpg" alt="Imagen">
         <h2 id="numero">0</h2>
       </div>
-      <script src="../js/script.js"></script>
+      <script src="Script.js"></script>
 
         <h1>Retro</h1>
 
